apps/homebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
spec:
  selector:
    app: homebox
  ports:
    - name: http
      port: 80
      targetPort: 7745
  type: ClusterIP
